[package]
name = "bezier-curve"
version = "0.1.0"
authors = ["chrizzsh <chrizzsh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.22"
cgmath = "0.17"
futures = "0.3"
env_logger = "0.7"
wgpu = "0.6"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
itertools-num = "0.1.3"
num-integer = "0.1.44"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.6"